Fix label of caption wrapping

--- a/packages/react-day-picker/style.css
+++ b/packages/react-day-picker/style.css
@@ -109,6 +109,7 @@ button.rdp-weeknumber:hover {
   font-family: inherit;
   font-size: 140%;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 /* ---------- */
